<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/instrText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
    	
    	<TextView
    		android:text="@string/SR_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="fill"
        	android:gravity="center_horizontal" />
    
   		<Spinner
            android:id="@+id/SR_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
   		
   	</LinearLayout>
   	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_load"
            android:text="@string/load" />

        <ToggleButton
            android:id="@+id/recButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_record"
            android:textOff="@string/rec"
            android:textOn="@string/stop" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_play"
            android:text="@string/play" />
    </LinearLayout>
    
    <Button
        android:id="@+id/fftButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_fft"
        android:text="@string/fft" />
    
    <TextView 
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    
    <TextView 
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical" />

</LinearLayout>
